[gd_scene load_steps=20 format=3 uid="uid://cukcc3j626x46"]

[ext_resource type="Script" uid="uid://cinbhoboeuhr0" path="res://scenes/main.gd" id="1_ya4ey"]
[ext_resource type="Script" uid="uid://fgpp067x6gp8" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="2_eb6dy"]
[ext_resource type="PackedScene" uid="uid://bb8i4pgspiu2a" path="res://scenes/ui/HUD.tscn" id="3_trceg"]
[ext_resource type="Script" uid="uid://cfmoupqkt6of5" path="res://addons/road-generator/nodes/road_manager.gd" id="4_a8y0u"]
[ext_resource type="PackedScene" uid="uid://dn661qktwvqbr" path="res://scenes/player/road_actor.tscn" id="5_jkv2x"]
[ext_resource type="Script" uid="uid://dtckehf4kuv" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="6_jbj1t"]
[ext_resource type="Script" uid="uid://dfyr4irvch8fg" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="7_muem4"]
[ext_resource type="Script" uid="uid://cux7l3tjemdj6" path="res://addons/road-generator/nodes/road_container.gd" id="8_dp3eg"]
[ext_resource type="Script" uid="uid://vt2vygyaeig" path="res://addons/road-generator/nodes/road_point.gd" id="9_0ld40"]
[ext_resource type="Shader" uid="uid://ckf4ejty0lf50" path="res://assets/shaders/beam.gdshader" id="9_trceg"]
[ext_resource type="Script" uid="uid://c672kgvnyc545" path="res://addons/vaporwavesky/vaporwave_sky_material.gd" id="10_gqmmt"]
[ext_resource type="Shader" uid="uid://c4e8u4wfjg6in" path="res://addons/vaporwavesky/vaporwave.gdshader" id="11_yc10j"]
[ext_resource type="PackedScene" uid="uid://dp42fom7cc3n0" path="res://scenes/ui/settings.tscn" id="12_eb6dy"]

[sub_resource type="Resource" id="Resource_t4rbw"]
script = ExtResource("7_muem4")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="Resource" id="Resource_wi31b"]
script = ExtResource("7_muem4")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a8y0u"]
render_priority = 0
shader = ExtResource("9_trceg")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iynle"]
shader = ExtResource("11_yc10j")
shader_parameter/sky_color = Color(0.1, 0.07, 0.2, 1)
shader_parameter/sky_horizon_color = Color(0.56, 0.18, 0.42, 1)
shader_parameter/sky_horizon_decay = 3.0
shader_parameter/ground_color = Color(0, 0, 0, 1)
shader_parameter/ground_horizon_color = Color(0.1, 0, 0.07, 1)
shader_parameter/ground_horizon_decay = 1.0
shader_parameter/stars_enabled = true
shader_parameter/stars_below_horizon = false
shader_parameter/star_color = Color(0.95, 0.9, 0.6, 1)
shader_parameter/star_radius = 0.3
shader_parameter/star_density = 5.0
shader_parameter/star_randomness = 1.0
shader_parameter/star_seed = Vector2(0, 0)
shader_parameter/grid_enabled = true
shader_parameter/grid_color = Color(0.18, 0.92, 0.74, 1)
shader_parameter/grid_depth = 2.0
shader_parameter/grid_spacing = 1.0
shader_parameter/grid_thickness = 0.03
shader_parameter/grid_max_distance = 25.0
shader_parameter/grid_max_distance_fade = 0.3
shader_parameter/grid_energy = 2.0
shader_parameter/sun_radius = 10.0
shader_parameter/sun_smoothing = 0.35
shader_parameter/sun_glow_color = Color(0.96, 0.9, 0.35, 1)
shader_parameter/sun_glow_radius = 30.0
shader_parameter/sun_glow_intensity = 0.5
shader_parameter/sun_gradient_enabled = true
shader_parameter/sun_color_1 = Color(0.96, 0.9, 0.35, 1)
shader_parameter/sun_color_2 = Color(0.96, 0.35, 0.9, 1)
shader_parameter/sun_gradient_pos_frac = 0.6
shader_parameter/sun_gradient_span_frac = 0.8
shader_parameter/sun_banding_enabled = true
shader_parameter/sun_banding_base_gap = 0.03
shader_parameter/sun_banding_gap_mul = 1.1
shader_parameter/sun_banding_stop_height = 0.7
shader_parameter/sun_banding_thickness = 0.01
script = ExtResource("10_gqmmt")
metadata/_custom_type_script = "uid://c672kgvnyc545"

[sub_resource type="Sky" id="Sky_6uewd"]
sky_material = SubResource("ShaderMaterial_iynle")
process_mode = 3

[sub_resource type="Environment" id="Environment_hv5me"]
background_mode = 2
sky = SubResource("Sky_6uewd")

[node name="Main" type="Node3D"]
script = ExtResource("1_ya4ey")
target_node = NodePath("RoadManager/vehicles/Player/Camera_TP")

[node name="MainCamera3D" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.987019, 0.160605, 0, -0.160605, 0.987019, -0.0744871, 2.03322, 5.01706)

[node name="PhantomCameraHost" type="Node" parent="MainCamera3D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("2_eb6dy")
metadata/_custom_type_script = "uid://fgpp067x6gp8"

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true
directional_shadow_mode = 0
sky_mode = 1

[node name="debug" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 33.0
offset_top = 403.0
offset_right = 73.0
offset_bottom = 436.0

[node name="HUD" parent="." instance=ExtResource("3_trceg")]
unique_name_in_owner = true

[node name="RoadManager" type="Node3D" parent="."]
script = ExtResource("4_a8y0u")

[node name="vehicles" type="Node3D" parent="RoadManager"]

[node name="Player" parent="RoadManager/vehicles" instance=ExtResource("5_jkv2x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.105437, 0)
visualize_lane = true
auto_register = false

[node name="Camera_TP" type="Node3D" parent="RoadManager/vehicles/Player"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.987019, 0.160605, 0, -0.160605, 0.987019, -0.0744871, 1.92778, 5.01706)
script = ExtResource("6_jbj1t")
tween_resource = SubResource("Resource_t4rbw")
tween_on_load = false
metadata/_custom_type_script = "uid://dtckehf4kuv"

[node name="Camera_FPS" type="Node3D" parent="RoadManager/vehicles/Player"]
transform = Transform3D(1, 0, 0, 0, 0.999874, 0.0158823, 0, -0.0158823, 0.999874, 0.329499, 1.06273, -0.046778)
script = ExtResource("6_jbj1t")
tween_resource = SubResource("Resource_wi31b")
tween_on_load = false
metadata/_custom_type_script = "uid://dtckehf4kuv"

[node name="Road_001" type="Node3D" parent="RoadManager"]
script = ExtResource("8_dp3eg")
material_resource = SubResource("ShaderMaterial_a8y0u")
use_lowpoly_preview = true
generate_ai_lanes = true
auto_free_vehicles = false
draw_lanes_editor = true
edge_containers = Array[NodePath]([NodePath(""), NodePath("")])
edge_rp_targets = Array[NodePath]([NodePath(""), NodePath("")])
edge_rp_target_dirs = Array[int]([-1, -1])
edge_rp_locals = Array[NodePath]([NodePath("RP_001"), NodePath("RP_002")])
edge_rp_local_dirs = Array[int]([0, 1])

[node name="RP_001" type="Node3D" parent="RoadManager/Road_001"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 21.9997)
script = ExtResource("9_0ld40")
traffic_dir = Array[int]([1, 1])
lanes = Array[int]([0, 2])
lane_width = 2.0
shoulder_width_l = 1.0
shoulder_width_r = 1.0
gutter_profile = Vector2(2, 2)
prior_pt_init = NodePath("../RP_002")
prior_mag = 20.0
next_mag = 20.0

[node name="RP_002" type="Node3D" parent="RoadManager/Road_001"]
transform = Transform3D(0.999842, -0.000116941, 0.0178009, 0, 0.999978, 0.00656924, -0.0178013, -0.0065682, 0.99982, -0.677433, 0.25, -16.0496)
script = ExtResource("9_0ld40")
traffic_dir = Array[int]([1, 1])
lanes = Array[int]([0, 2])
lane_width = 2.0
shoulder_width_l = 0.0
shoulder_width_r = 0.0
next_pt_init = NodePath("../RP_001")
prior_mag = 20.0
next_mag = 20.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_hv5me")

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(-1, 1.21669e-08, -8.6572e-08, -1.98412e-08, 0.93284, 0.36029, 8.51415e-08, 0.36029, -0.93284, 0, 10.7352, -18.4659)
light_color = Color(0.752941, 0.662745, 1, 1)
light_energy = 0.464

[node name="Settings" parent="." instance=ExtResource("12_eb6dy")]
visible = false

[connection signal="hidden" from="Settings" to="." method="_on_settings_hidden"]
[connection signal="reload_ui" from="Settings" to="HUD" method="_on_reload_hud"]
